[tool.poetry]
name = "rasapro-3-9-x-assistant"
version = "0.1.0"
description = "A simple Rasa assistant"
authors = ["John Trammell <j.trammell@rasa.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "rasapro_3"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rasa-pro = { version = "^3.9.0", source = "rasa" }

[[tool.poetry.source]]
name = "rasa"
url = "https://europe-west3-python.pkg.dev/rasa-releases/rasa-pro-python/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
